# qscreen-metadata

./: CMakeLists.txt  default.cpp  macos.mm  main.cpp  mainwidget.ui  screens.h  windows.cpp
